[package]
name = "skia-vulkan-gl-renderer"
version = "0.1.0"
authors = ["kai <thiskaiguy@gmail.com>"]
edition = "2018"

[dependencies]
skulpin = { version = "0.11", default-features = false, features = ["skia_complete", "skulpin_winit", "winit-23" ] }
skia-safe = { version = "*", features = ["textlayout", "vulkan", "gl"] }
glutin = "0.25"
gl = "0.14"
